[package]
name = "energy-star-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.faithe]
git = "https://github.com/sy1ntexx/faithe"

[dependencies.windows]
version = "0.36"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_UI_Accessibility"

]

[dependencies.windows-sys]
version = "0.36"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WindowsProgramming",
    "Win32_Foundation",
    "Win32_System_SystemServices",    
]
